Fixed scrollbar styling

--- a/source/sass/main.sass
+++ b/source/sass/main.sass
@@ -6,6 +6,7 @@
   --bg-color: #eee
   --primary-color: #fff
   --secondary-color: #34324e
+  --color-red: #c15c5c
   
 *,
 *::before,
@@ -27,9 +28,10 @@ body
 
 ::-webkit-scrollbar
   width: 5px
+  height: 3px
 
 ::-webkit-scrollbar-thumb
-  background-color: #fff
+  background-color: #444
 
 
 #root
